@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0

interface Command
class HelpCommandUi
class HelpCommand
class Parser
class Ui

Ui <|- HelpCommandUi
HelpCommand <.. Parser
Command <|. HelpCommand
HelpCommandUi <.. HelpCommand

interface Command <<interface>> {
    +execute():void
    +isQuit():boolean
}

class HelpCommand {
    {static}-getHelpCommandReply():String
    +execute():void
    +isQuit():boolean
}

class Ui {
    {static}+printLine():void
}

class HelpCommandUi {
    {static}+helpCommandSuccess():void
    {static}+printNewCommandParams():void
    {static}+printDeleteCommandParams():void
    {static}+printChangeCommandParams():void
    {static}+printUpdateCommandParams():void
    {static}+helpClosingMessage():void
}

class Parser {
    {static}-parseCommand():HelpCommand
}

note "Some parameters and methods \nomitted for brevity" as n1

@enduml

@startuml
hide footbox
actor User as User
participant "SuperTracker" as SuperTracker <<class>> #f5e3a9
participant ":HelpCommand" as HelpCommand #cbf7f4
participant "HelpCommandUi" as HelpCommandUi <<class>> #e5c2ea

SuperTracker -> HelpCommand : execute()
activate HelpCommand #cbf7f4

HelpCommand -> HelpCommandUi : helpCommandSuccess()
activate HelpCommandUi #e5c2ea
HelpCommandUi --> HelpCommand
deactivate HelpCommandUi

User -> HelpCommand : input:String

HelpCommand -> HelpCommand : getHelpCommandReply(input:String)
activate HelpCommand #cbf7f4
HelpCommand --> HelpCommand : helpCommandWord:String
deactivate HelpCommand

HelpCommand -> HelpCommandUi : printLine()
activate HelpCommandUi #e5c2ea
HelpCommandUi --> HelpCommand
deactivate HelpCommandUi

alt Valid command word
HelpCommand -> HelpCommandUi : printCommandParams()
activate HelpCommandUi #e5c2ea
HelpCommandUi --> HelpCommand
deactivate HelpCommandUi
else Invalid command word
HelpCommand -> HelpCommandUi : printInvalidHelpMessage()
activate HelpCommandUi #e5c2ea
HelpCommandUi --> HelpCommand
deactivate HelpCommandUi
end

HelpCommand -> HelpCommandUi : helpClosingMessage()
activate HelpCommandUi #e5c2ea
HelpCommandUi --> HelpCommand
deactivate HelpCommandUi

HelpCommand --> SuperTracker
deactivate HelpCommand
@enduml